[tool.poetry]
name = "styxdocker"
version = "0.1.0"
description = "Docker integration for Styx compiled wrappers."
authors = ["Florian Rupprecht <33600480+nx10@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "styxdocker", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
styxdefs = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
mypy = "^1.11.2"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
ruff = "^0.6.3"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.6.1"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = [
  "ANN101",  # self should not be annotated.
  "ANN102"  # cls should not be annotated.
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
